--- a/BlueDeployment/index.html
+++ b/BlueDeployment/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h2>Austin Meyer Capstone Project Blue Deployment</h2>
-  <h2>Git repository: https://github.com/AustinAMeyer/Udacity-AWS-Cloud-DevOps-Capstone</h2>
+  <h2>Github repository: https://github.com/AustinAMeyer/Udacity-AWS-Cloud-DevOps-Capstone</h2>
 </body>
 </html>
