--- a/GreenDeployment/index.html
+++ b/GreenDeployment/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Austin Meyer Capstone Project</title>
+  <title>Austin Meyer Capstone Project Green Deployment</title>
 </head>
 <body>
-  <h2>Austin Meyer Capstone Project</h2>
-  <h2>Git repository: https://github.com/AustinAMeyer/Udacity-AWS-Cloud-DevOps-Capstone</h2>
+  <h2>Austin Meyer Capstone Project Green Deployment</h2>
+  <h2>Github repository: https://github.com/AustinAMeyer/Udacity-AWS-Cloud-DevOps-Capstone</h2>
 </body>
 </html>
