--- a/GreenDeployment/index.html
+++ b/GreenDeployment/index.html
@@ -5,7 +5,7 @@
   <title>Austin Meyer Capstone Project Green Deployment</title>
 </head>
 <body>
-  <h2>Austin Meyer Capstone Project Green Deployment</h2>
+  <h2>Austin Meyer Capstone Project <span style="color: green;">Green</span> Deployment</h2>
   <h2>Github repository: https://github.com/AustinAMeyer/Udacity-AWS-Cloud-DevOps-Capstone</h2>
 </body>
 </html>
