Making the change to green

--- a/BlueDeployment/index.html
+++ b/BlueDeployment/index.html
@@ -5,7 +5,7 @@
   <title>Austin Meyer Capstone Project Blue Deployment</title>
 </head>
 <body>
-  <h2>Austin Meyer Capstone Project Blue Deployment</h2>
+  <h2>Austin Meyer Capstone Project <span style="color: blue;">Blue</span> Deployment</h2>
   <h2>Github repository: https://github.com/AustinAMeyer/Udacity-AWS-Cloud-DevOps-Capstone</h2>
 </body>
 </html>
